# Hermes

./: .gitignore  Cargo.toml  README.md
.github/: .dependabot.yml
.github/workflows/: linux-build.yml  windows-build.yml
compiler/: Cargo.toml
compiler/hermesc/: Cargo.toml
compiler/hermesc/src/: main.rs
compiler/llvm/: Cargo.toml
compiler/llvm/src/: lib.rs
compiler/parser/: Cargo.toml
compiler/parser/src/: ast.rs  lexer.rs  lib.rs  token.rs
compiler/parser/src/grammar/: class.rs  expression.rs  mod.rs  statement.rs
compiler/src/: main.rs
compiler/src/logger/: mod.rs
compiler/src/parser/: ast.rs  mod.rs  reader.rs  token.rs
compiler/src/parser/grammar/: expression.rs  mod.rs  statement.rs
src/: main.rs
src/llvm/: mod.rs
src/parser/: ast.rs  lexer.rs  mod.rs  reader.rs  token.rs
