[package]
name = "hermesc_llvm"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
inkwell = { version = "0.6.0", features = ["llvm18-1"]}
serde_json = { version = "1.0.143" }
serde = { version = "1.0.219", features = ["derive"] }